--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <h1>Welcome</h1>
             <p>Choose your language:</p>
 
-            <a href="indexen.html" class="btn"><img src="../danycoutinho.github.io/imgs/flags/united-kingdom.png" alt="">English<img src="../danycoutinho.github.io/imgs/flags/united-states.png" alt=""></a>
+            <a href="indexen.html" class="btn"><img src="../oodanycoutinho.github.io/imgs/flags/united-kingdom.png" alt="">English<img src="../odanycoutinho.github.io/imgs/flags/united-states.png" alt=""></a>
 
-            <a href="indexpt.html" class="btn"><img src="../danycoutinho.github.io/imgs/flags/portugal.png" alt="">Portuguese<img src="../danycoutinho.github.io/imgs/flags/brazil.png" alt=""></a>
+            <a href="indexpt.html" class="btn"><img src="../oodanycoutinho.github.io/imgs/flags/portugal.png" alt="">Portuguese<img src="../odanycoutinho.github.io/imgs/flags/brazil.png" alt=""></a>
 
-            <a href="indexfr.html" class="btn"><img src="../danycoutinho.github.io/imgs/flags/france.png" alt="">French<img src="../danycoutinho.github.io/imgs/flags/switzerland.png" alt=""></a>
+            <a href="indexfr.html" class="btn"><img src="../odanycoutinho.github.io/imgs/flags/france.png" alt="">French<img src="../odanycoutinho.github.io/imgs/flags/switzerland.png" alt=""></a>
         </div>
     </header>
 </body>
