--- a/indexen.html
+++ b/indexen.html
@@ -92,7 +92,7 @@
                     School Career
                 </h3>
                 <p>
-                    Having another vision and other ambitions, from 2009 I opted for more technical and specialized education, thus changing the course of my life continuing to learn until today as you can see in my <a href="https://github.com/DanyCoutinho">GitHub</a>.
+                    Having another vision and other ambitions, from 2009 I opted for more technical and specialized education, thus changing the course of my life continuing to learn until today as you can see in my <a href="https://github.com/oodanycoutinho">GitHub</a>.
                 </p>
             </article>
 
@@ -150,7 +150,7 @@
                     Programming
                 </h3>
                 <p>
-                    My experience in programming has gone through several languages, from school to now, at this time I am practicing developing personal projects that you can follow on my <a href="https://github.com/DanyCoutinho">GitHub</a>.
+                    My experience in programming has gone through several languages, from school to now, at this time I am practicing developing personal projects that you can follow on my <a href="https://github.com/oodanycoutinho">GitHub</a>.
                 </p>
             </article>
         </section>
@@ -175,19 +175,19 @@
         <nav id="footermenu">
             <a href="https://www.instagram.com/dany.suico/" target="_blank"><img src="imgs/icosocialmedia/logo_instagram_icon.png" alt="Instagram"></a>
 
-            <a href="https://www.facebook.com/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_facebook_icon.png" alt="Facebook">
+            <a href="https://www.facebook.com/ooodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_facebook_icon.png" alt="Facebook">
 
-            <a href="https://github.com/DanyCoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_github_icon.png" alt="GitHub"></a>
+            <a href="https://github.com/oodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_github_icon.png" alt="GitHub"></a>
                 
-            <a href="https://twitter.com/ODanyCoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_twitter_bird_icon.png" alt="Twitter"></a>
+            <a href="https://twitter.com/Ooodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_twitter_bird_icon.png" alt="Twitter"></a>
 
-            <a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank"><img src="imgs/icosocialmedia/logo_linkedin_icon.png" alt="LinkedIn"></a>
+            <a href="https://www.linkedin.com/in/oodanycoutinho/" target="_blank"><img src="imgs/icosocialmedia/logo_linkedin_icon.png" alt="LinkedIn"></a>
 
             <a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank"><img src="imgs/icosocialmedia/logo_youtube_icon.png" alt="YouTube"></a>
 
             <a href="https://api.whatsapp.com/send?phone=351919630441" target="_blank"><img src="imgs/icosocialmedia/logo_whatsapp_telephone_handset_icon.png" alt=""></a>
 
-            <a href="https://t.me/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_telegram_airplane_air_plane_paper_airplane_icon.png" alt="Telegram"></a>
+            <a href="https://t.me/ooodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_telegram_airplane_air_plane_paper_airplane_icon.png" alt="Telegram"></a>
         </nav>
 
         <p class="footer">Developed by Dany Coutinho</p>
