--- a/indexfr.html
+++ b/indexfr.html
@@ -92,7 +92,7 @@
                     Parcours Scolaire
                 </h3>
                 <p>
-                    Ayant une autre vision et d’autres ambitions, à partir de 2009, j’ai opté pour l’éducation plus technique et spécialisée, changeant ainsi le cours de ma vie en continuant d’apprendre jusqu’à aujourd’hui comment vous pouvez vérifier sur mon <a href="https://github.com/DanyCoutinho">GitHub</a>.
+                    Ayant une autre vision et d’autres ambitions, à partir de 2009, j’ai opté pour l’éducation plus technique et spécialisée, changeant ainsi le cours de ma vie en continuant d’apprendre jusqu’à aujourd’hui comment vous pouvez vérifier sur mon <a href="https://github.com/odanycoutinho">GitHub</a>.
                 </p>
             </article>
 
@@ -150,7 +150,7 @@
                     Programmation
                 </h3>
                 <p>
-                    Mon expérience de la programmation a traversé plusieurs langages, de l’école à aujourd’hui, je m’entraîne actuellement à développer des projets personnels qui pourront suivre sur mon <a href="https://github.com/DanyCoutinho">GitHub</a>.
+                    Mon expérience de la programmation a traversé plusieurs langages, de l’école à aujourd’hui, je m’entraîne actuellement à développer des projets personnels qui pourront suivre sur mon <a href="https://github.com/odanycoutinho">GitHub</a>.
                 </p>
             </article>
         </section>
@@ -175,19 +175,19 @@
         <nav id="footermenu">
             <a href="https://www.instagram.com/dany.suico/" target="_blank"><img src="imgs/icosocialmedia/logo_instagram_icon.png" alt="Instagram"></a>
 
-            <a href="https://www.facebook.com/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_facebook_icon.png" alt="Facebook">
+            <a href="https://www.facebook.com/oodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_facebook_icon.png" alt="Facebook">
 
-            <a href="https://github.com/DanyCoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_github_icon.png" alt="GitHub"></a>
+            <a href="https://github.com/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_github_icon.png" alt="GitHub"></a>
                 
-            <a href="https://twitter.com/ODanyCoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_twitter_bird_icon.png" alt="Twitter"></a>
+            <a href="https://twitter.com/Oodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_twitter_bird_icon.png" alt="Twitter"></a>
 
-            <a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank"><img src="imgs/icosocialmedia/logo_linkedin_icon.png" alt="LinkedIn"></a>
+            <a href="https://www.linkedin.com/in/odanycoutinho/" target="_blank"><img src="imgs/icosocialmedia/logo_linkedin_icon.png" alt="LinkedIn"></a>
 
             <a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank"><img src="imgs/icosocialmedia/logo_youtube_icon.png" alt="YouTube"></a>
 
             <a href="https://api.whatsapp.com/send?phone=351919630441" target="_blank"><img src="imgs/icosocialmedia/logo_whatsapp_telephone_handset_icon.png" alt=""></a>
 
-            <a href="https://t.me/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_telegram_airplane_air_plane_paper_airplane_icon.png" alt="Telegram"></a>
+            <a href="https://t.me/oodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_telegram_airplane_air_plane_paper_airplane_icon.png" alt="Telegram"></a>
         </nav>
 
         <p class="footer">Développé par Dany Coutinho</p>
