--- a/indexpt.html
+++ b/indexpt.html
@@ -92,7 +92,7 @@
                     Percurso Escolar
                 </h3>
                 <p>
-                    Tendo eu outra visão e outras ambições, a partir de 2009 optei pela educação mais técnica e especializada mudando assim o rumo da minha vida continuando a aprender até hoje como poderão verificar no meu <a href="https://github.com/DanyCoutinho">GitHub</a>.
+                    Tendo eu outra visão e outras ambições, a partir de 2009 optei pela educação mais técnica e especializada mudando assim o rumo da minha vida continuando a aprender até hoje como poderão verificar no meu <a href="https://github.com/odanycoutinho">GitHub</a>.
                 </p>
             </article>
 
@@ -150,7 +150,7 @@
                     Programação
                 </h3>
                 <p>
-                    A minha experiência em programação passou por várias linguagens, desde os tempos de escola até agora, neste momento vou praticando desenvolvendo projetos pessoais que poderão acompanhar no meu <a href="https://github.com/DanyCoutinho">GitHub</a>.
+                    A minha experiência em programação passou por várias linguagens, desde os tempos de escola até agora, neste momento vou praticando desenvolvendo projetos pessoais que poderão acompanhar no meu <a href="https://github.com/odanycoutinho">GitHub</a>.
                 </p>
             </article>
         </section>
@@ -175,19 +175,19 @@
         <nav id="footermenu">
             <a href="https://www.instagram.com/dany.suico/" target="_blank"><img src="imgs/icosocialmedia/logo_instagram_icon.png" alt="Instagram"></a>
 
-            <a href="https://www.facebook.com/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_facebook_icon.png" alt="Facebook">
+            <a href="https://www.facebook.com/oodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_facebook_icon.png" alt="Facebook">
 
-            <a href="https://github.com/DanyCoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_github_icon.png" alt="GitHub"></a>
+            <a href="https://github.com/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_github_icon.png" alt="GitHub"></a>
                 
-            <a href="https://twitter.com/ODanyCoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_twitter_bird_icon.png" alt="Twitter"></a>
+            <a href="https://twitter.com/Oodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_twitter_bird_icon.png" alt="Twitter"></a>
 
-            <a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank"><img src="imgs/icosocialmedia/logo_linkedin_icon.png" alt="LinkedIn"></a>
+            <a href="https://www.linkedin.com/in/odanycoutinho/" target="_blank"><img src="imgs/icosocialmedia/logo_linkedin_icon.png" alt="LinkedIn"></a>
 
             <a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank"><img src="imgs/icosocialmedia/logo_youtube_icon.png" alt="YouTube"></a>
 
             <a href="https://api.whatsapp.com/send?phone=351919630441" target="_blank"><img src="imgs/icosocialmedia/logo_whatsapp_telephone_handset_icon.png" alt=""></a>
 
-            <a href="https://t.me/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_telegram_airplane_air_plane_paper_airplane_icon.png" alt="Telegram"></a>
+            <a href="https://t.me/oodanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_telegram_airplane_air_plane_paper_airplane_icon.png" alt="Telegram"></a>
         </nav>
 
         <p class="footer">Desenvolvido por Dany Coutinho</p>
