--- a/profissional.html
+++ b/profissional.html
@@ -14,8 +14,8 @@
 
     <h2>Como falar comigo?</h2>
     <ul>
-        <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank">Dany Coutinho</a> - Adiciona-me no LinkedIn</li>
-        <li><img src="imgs/icone-github.png" alt="GitHub"><a href="https://github.com/DanyCoutinho" target="_blank">Dany Coutinho</a> - Acessa ao meu repositório público no GitHub e envolve-te nos meus projetos</li>
+        <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/odanycoutinho/" target="_blank">Dany Coutinho</a> - Adiciona-me no LinkedIn</li>
+        <li><img src="imgs/icone-github.png" alt="GitHub"><a href="https://github.com/odanycoutinho" target="_blank">Dany Coutinho</a> - Acessa ao meu repositório público no GitHub e envolve-te nos meus projetos</li>
         <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Suíço</a>- Segue-me no Instagram</li>
         <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Suíço</a>- Inscreve-te no meu canal YouTube!</li>
         <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a>- Segue-me no Twitter</li>
