--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!--<link rel="stylesheet" href="style/index.css">-->
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/menu.css">
-    <title>CSS Hamburguer menu</title>
+    <link rel="icon" type="imagem/png" href="imgs/Favicon.png" />
+    <title>Dany Coutinho</title>
 </head>
 
 <body>
