--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <header class="showcase">
         <div class="container showcase-inner">
-            <h1>Welcom</h1>
+            <h1>Welcome</h1>
             <p>Choose your language:</p>
 
             <a href="indexen.html" class="btn"><img src="../oodanycoutinho.github.io/imgs/flags/united-kingdom.png" alt="">English<img src="../odanycoutinho.github.io/imgs/flags/united-states.png" alt=""></a>
